# Leidokos-Python

./: .appveyor.yml  .gitmodules  .kaleidoscope-builder.conf  .travis.yml  CMakeLists.txt  Makefile  README.md  kaleidoscope_testing.py  library.properties  test_kaleidoscope.py
API/: .buildinfo  KeyReportAssertions.html  ProcessAssertions.html  Test.html  genindex.html  index.html  kaleidoscope.hid.html  kaleidoscope.html  kaleidoscope.ranges.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
API/.doctrees/: KeyReportAssertions.doctree  ProcessAssertions.doctree  Test.doctree  environment.pickle  index.doctree  kaleidoscope.doctree  kaleidoscope.hid.doctree  kaleidoscope.ranges.doctree  modules.doctree
API/_sources/: Test.rst.txt  kaleidoscope.rst.txt  modules.rst.txt
API/_static/: documentation_options.js
cmake/: api_doc.include.cmake  arduino_symlinks.include.cmake  build_sphinx_doc.script.cmake  check_administrative_privileges.include.cmake  extract_keymap.macros.cmake  generate_symlink.macros.cmake  prepare_modules.include.cmake  versioning.include.cmake
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: KeyReportAssertions.rst  ProcessAssertions.rst  _kaleidoscope.hid.rst  _kaleidoscope.ranges.rst  _kaleidoscope.rst  conf.py  conf.py.in  index.rst  kaleidoscope.ranges.rst  kaleidoscope.rst  leidokos.rst  modules.rst
examples/: Kaleidoscope-Dual-Use  test_kaleidoscope.py
examples/Kaleidoscope-Dual-Use/: dual_use.ino  dual_use.py  dual_use_driver.py
examples/Kaleidoscope-Dual-Use/c++_implementation/: dual_use_sketch.ino
examples/Kaleidoscope-Dual-Use/python_implementation/: dual_use_sketch.ino  specification.yaml
examples/Kaleidoscope-Heatmap/: heat_map_driver.py  heat_map_sketch.ino
python/: GraphicalMap.py  Hardware-Model01.py  KeyReportAssertions.py  ProcessAssertions.py  Test.py  _Assertion.py  _indentation.py  kaleidoscope.py  kaleidoscope_testing.py  leidokos.py
src/: IncludesHardwareVirtual.h  KPV_Exception.hpp  KPV_Key_Alias.h  KPV_Logging.h  KPV_Versioning.cpp.in  Kaleidoscope-Python-Wrapper.cpp  Kaleidoscope-Python-Wrapper.h  Kaleidoscope-Python.cpp  Kaleidoscope-Python.h  Key_Alias.h  KeyboardReport.cpp  KeyboardReport.h  LEDs.cpp  Leidokos-Python.cpp  Leidokos-Python.h
src/Kaleidoscope-Ranges/src/: Kaleidoscope-Ranges.cpp
src/Kaleidoscope/src/: kaleidoscope.cpp  key_defs.cpp  key_defs_aliases.cpp  key_defs_consumerctl.cpp  key_defs_keyboard.cpp  key_defs_keymaps.cpp  key_defs_sysctl.cpp  key_events.cpp  keyswitch_state.cpp  layers.cpp
src/Kaleidoscope/src/kaleidoscope/: hid.cpp
support/x86/: boards.txt.in  cores  platform.txt  variants
testing/Kaleidoscope-Dual-Use/: Kaleidoscope-Dual-Use  specification.yaml
testing/Kaleidoscope-Dual-Use/Kaleidoscope-Dual-Use/c++_implementation/: specification.yaml
testing/Kaleidoscope-Dual-Use/Kaleidoscope-Dual-Use/python_implementation/: dual_use_sketch.ino  specification.yaml
